--- a/src/pages/dashboard/Card/Card.css
+++ b/src/pages/dashboard/Card/Card.css
@@ -121,6 +121,177 @@ img {
     display: inline-block;
     margin-left: 25px;
 }
+/*post-comment*/
+
+.comments-count {
+    margin: 44px 0px;
+}
+
+.comments-count h4, .comment-responsd h4 {
+    font-size: 18px;
+    font-weight: 400;
+    color: #4a4a4a;
+    line-height: 23px;
+}
+
+.comments-count h4 span {
+    margin-right: 8px;
+}
+
+.comments > ul > li {
+    border: 1px solid #f6f6f6;
+    margin-top: 25px;
+    padding: 0px 10px 0px 25px;
+    border-radius: 14px;
+}
+
+.comment-status-text {
+    overflow: hidden;
+    margin: 27px 0px;
+}
+/*.slick-prev, .slick-next {*/
+/*    font-size: 15px !important;*/
+/*}*/
+
+/*.slick-prev:before, .slick-next:before  {*/
+/*    content: '' !important;*/
+/*}*/
+.comment-img {
+    float: left;
+    border-radius: 50% !important;
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: bold;
+    background-color: #f26522;
+}
+
+.comment-img img {
+    max-width: 100%;
+}
+
+.comment-author-metadata {
+    padding-left: 86px;
+}
+
+.comment-author-metadata h4.author {
+    font-size: 14px;
+    font-weight: 400;
+    color: #000000;
+    letter-spacing: 0.2em;
+    line-height: 20px;
+    overflow: hidden;
+}
+
+.comment-author-metadata h4.author span.date {
+    float: right;
+    font-size: 11px;
+    color: #575757;
+    letter-spacing: 0.05em;
+}
+
+.comment-author-metadata p.comment-content {
+    font-size: 12px;
+    font-weight: 300;
+    color: #444444;
+    letter-spacing: 0.09em;
+    line-height: 18px;
+    margin-top: 2px;
+}
+
+.comment-author-metadata a.comment-reply-link {
+    margin-left: 15px;
+    font-size: 9px;
+    color: #9e8358;
+}
+
+.comment-author-metadata a.comment-reply-link:hover{
+    color: #444;
+}
+ul, li{
+    list-style-type: none!important;
+}
+ul.children {
+    padding-left: 85px;
+    position: relative;
+    overflow: hidden;
+}
+
+ul.children::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 56px;
+    width: 60px;
+    height: 1px;
+    background: #9c8156;
+}
+
+.comment-responsd {
+    padding: 96px 0px 50px;
+}
+
+.comment-responsd h4{
+    color: #f26522;
+}
+
+.contact-form {
+    padding-top: 22px;
+}
+
+form#cf label {
+    display: block;
+    font-size: 12px;
+    font-weight: 300;
+    color: #4a4a4a;
+    letter-spacing: 0.2em;
+    margin: 14px 0px 3px 8px;
+    font-style: italic;
+}
+
+form#cf input {
+    width: 300px;
+    height: 40px;
+    border: 1px solid #d6d6d6;
+    border-radius: 12px;
+    padding-left: 15px;
+    color: #444;
+    font-size: 13px;
+}
+
+form#cf textarea{
+    width: 100%;
+    height: 173px;
+    border: 1px solid #d6d6d6;
+    border-radius: 12px;
+    padding: 0px 10px 0px 15px;
+    color: #444;
+    font-size: 13px;
+}
+
+form#cf .cont-submit {
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    color: #ffffff;
+    line-height: 18px;
+    letter-spacing: 0.15em;
+    background: #f26522;
+    border: none;
+    padding: 9px 26px;
+    border-radius: 4px;
+    margin-top: 25px;
+    transition: all 0.3s ease 0s;
+}
+
+form#cf .cont-submit:hover, .blg-slider-text a.blg-post-cat:hover{
+    background: #cf5013;
+}
+
 
 /*2.6 default hover color*/
 .h-social-area a:hover, .main-menu nav ul li a:hover, .main-menu nav ul li.active a, .mean-container .mean-nav ul li.active>a, .header-search span.show-src-btn:hover
